Modify the file

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
           <span class="method">get</span>
         </div>
         <div class="routeURL">
-          <span class="url"><a href="/user/all">/user/all</a></span>
-          <span class="url"><a href="/property/all-properties">/property/all-properties</a></span>
+          <span class="url"><a href="/.netlify/functions/api/user/all">/user/all</a></span>
+          <span class="url"><a href="/.netlify/functions/api/property/all-properties">/property/all-properties</a></span>
         </div>
       </div>
     </div>
