Update the index.html file

--- a/index.html
+++ b/index.html
@@ -8,40 +8,66 @@
   </head>
   <body>
     <h2>NyumbaHub API</h2>
-    <div class="paragraph">
+    <div class="welcomeMsg">
       <p>Welcome to NyumbaHub vacant houses API</p>
     </div>
     <div class="introContainer">
       <h4 class="introHeading">Here's what you need to know:</h4>
       <div class="introList">
-          <ul>
-            <li>The route endpoints that are accessible by all users are those under Public Endpoints, and they don't require signing in.</li>
-            <li>To access majority of routes you'll need to sign in, register first if you haven't already.</li>
-            <li>Routes that are not directly available to the public, or those on Other Endpoints, either require signing in first or can only be accessed by special/priviledged users.</li>
-          </ul>
+        <ul>
+          <li>
+            <strong><a href="#publicEndpoints">Public Endpoints</a></strong> has
+            the route endpoints that are accessible by all users without signing
+            in.
+          </li>
+          <li>
+            Routes that are not directly available to the public, or those on
+            <strong
+              ><a href="#protectedEndpoints">Protected Endpoints</a></strong
+            >, either require signing in first or can only be accessed by
+            special/priviledged users.
+          </li>
+          <li>
+            To access majority of routes you'll need to
+            <strong>sign in</strong>. If you haven't registered already,
+            <strong>register</strong> first.
+          </li>
+        </ul>
       </div>
     </div>
 
-    <div class="publics">
-      <h4 class="publicHeading">Public Endpoints</h4>
-      <div class="publicRoutes">
+    <div class="publicRoutesContainer" id="publicEndpoints">
+      <h4 class="routesHeading">Public Endpoints</h4>
+      <div class="route">
         <div class="routeMethod">
+          <span class="method">get</span>
           <span class="method">get</span>
           <span class="method">get</span>
         </div>
         <div class="routeURL">
-          <span class="url"><a href="/.netlify/functions/api/user/all">/user/all</a></span>
-          <span class="url"><a href="/.netlify/functions/api/property/all-properties">/property/all-properties</a></span>
+          <span class="url"
+            ><a href="/.netlify/functions/api/property/all-properties"
+              >/property/all-properties</a
+            ></span
+          >
+          <span class="url"
+            ><a href="/.netlify/functions/api/category/all"
+              >/category/all</a
+            ></span
+          >
+          <span class="url"
+            ><a href="/.netlify/functions/api/type/all">/type/all</a></span
+          >
         </div>
       </div>
     </div>
 
-    <div class="privates">
-      <h4 class="publicHeading">Other Endpoints</h4>
+    <div class="protectedRoutesContainer" id="protectedEndpoints">
+      <h4 class="routesHeading">Protected Endpoints</h4>
       <div class="routesGrid">
-        <div class="routesContainer">
+        <div class="routeCategory">
           <h5>Users</h5>
-          <div class="publicRoutes">
+          <div class="route">
             <div class="routeMethod">
               <span class="method">post</span>
               <span class="method">post</span>
@@ -55,25 +81,79 @@
               <span class="method">put</span>
               <span class="method">delete</span>
               <span class="method">get</span>
+              <span class="method">get</span>
             </div>
             <div class="routeURL">
-              <span class="url"><a href="/user/register">/user/register</a></span>
-              <span class="url"><a href="/user/login">/user/login</a></span>
-              <span class="url"><a href="/user/change-password">/user/change-password</a></span>
-              <span class="url"><a href="/user/logout">/user/logout</a></span>
-              <span class="url"><a href="/user/generate-token">/user/generate-token</a></span>
-              <span class="url"><a href="/user/forgot-password-token">/user/forgot-password-token</a></span>
-              <span class="url"><a href="/user/block-user/:id">user/block-user/:id</a></span>
-              <span class="url"><a href="/user/unblock-user/:id">/user/user/unblock-user/:id</a></span>
-              <span class="url"><a href="/user/reset-password/:token">/user/reset-password/:token</a></span>
-              <span class="url"><a href="user/update/:userId">user/update/:userId</a></span>
-              <span class="url"><a href="/user/delete/:userId">/user/delete/:userId</a></span>
-              <span class="url"><a href="/user/:userId">/user/:userId</a></span>
+              <span class="url"
+                ><a href="/.netlify/functions/api/user/register"
+                  >/user/register</a
+                ></span
+              >
+              <span class="url"
+                ><a href="/.netlify/functions/api/user/login"
+                  >/user/login</a
+                ></span
+              >
+              <span class="url"
+                ><a href="/.netlify/functions/api/user/change-password"
+                  >/user/change-password</a
+                ></span
+              >
+              <span class="url"
+                ><a href="/.netlify/functions/api/user/logout"
+                  >/user/logout</a
+                ></span
+              >
+              <span class="url"
+                ><a href="/.netlify/functions/api/user/generate-token"
+                  >/user/generate-token</a
+                ></span
+              >
+              <span class="url"
+                ><a href="/.netlify/functions/api/user/forgot-password-token/"
+                  >/forgot-password-token</a
+                ></span
+              >
+              <span class="url"
+                ><a href="/.netlify/functions/api/user/block-user/:id"
+                  >/user/block-user/:id</a
+                ></span
+              >
+              <span class="url"
+                ><a href="/.netlify/functions/api/user/unblock-user/:id"
+                  >/user/unblock-user/:id</a
+                ></span
+              >
+              <span class="url"
+                ><a
+                  href="/.netlify/functions/api/user/reset-password/:resetToken"
+                  >/reset-password/:token</a
+                ></span
+              >
+              <span class="url"
+                ><a href="/.netlify/functions/api/ser/update/:userId"
+                  >/user/update/:id</a
+                ></span
+              >
+              <span class="url"
+                ><a href="/.netlify/functions/api/user/delete/:userId"
+                  >/user/delete/:id</a
+                ></span
+              >
+              <span class="url"
+                ><a href="/.netlify/functions/api/user/:userId"
+                  >/user/:id</a
+                ></span
+              >
+              <span class="url"
+                ><a href="/.netlify/functions/api/user/all">/user/all</a></span
+              >
+            </div>
           </div>
         </div>
-        <div class="routesContainer">
+        <div class="routeCategory">
           <h5>Properties</h5>
-          <div class="publicRoutes">
+          <div class="route">
             <div class="routeMethod">
               <span class="method">post</span>
               <span class="method">put</span>
@@ -83,59 +163,120 @@
               <span class="method">get</span>
             </div>
             <div class="routeURL">
-              <span class="url"><a href="/property/add">/property/add</a></span>
-              <span class="url"><a href="/property/wishlist/:propertyId">/property/wishlist/:propertyId</a></span>
-              <span class="url"><a href="/property/add-review/:propertyId">/property/add-review/:propertyId</a></span>
-              <span class="url"><a href="/property/upload-image/:propertyId">/property/upload-image/:propertyId</a></span>
-              <span class="url"><a href="/property/delete/:propertyId">/property/delete/:propertyId</a></span>
-              <span class="url"><a href="/property/:propertyId">/property/:propertyId</a></span>
+              <span class="url"
+                ><a href="/.netlify/functions/api/property/add"
+                  >/property/add</a
+                ></span
+              >
+              <span class="url"
+                ><a href="/.netlify/functions/api/property/wishlist/:propertyId"
+                  >/property/wishlist/:id</a
+                ></span
+              >
+              <span class="url"
+                ><a
+                  href="/.netlify/functions/api/property/add-review/:propertyId"
+                  >/property/add-review/:id</a
+                ></span
+              >
+              <span class="url"
+                ><a
+                  href="/.netlify/functions/api/property/upload-image/:propertyId"
+                  >/upload-image/:id</a
+                ></span
+              >
+              <span class="url"
+                ><a href="/.netlify/functions/api/property/delete/:propertyId"
+                  >/property/delete/:id</a
+                ></span
+              >
+              <span class="url"
+                ><a href="/.netlify/functions/api/property/:propertyId"
+                  >/property/:id</a
+                ></span
+              >
             </div>
           </div>
         </div>
-        <div class="routesContainer">
-            <h5>Categories</h5>
-            <div class="publicRoutes">
-              <div class="routeMethod">
-                <span class="method">post</span>
-                <span class="method">delete</span>
-                <span class="method">get</span>
-              </div>
-              <div class="routeURL">
-                <span class="url"><a href="/category/create">/category/create</a></span>
-                <span class="url"><a href="/category/delete/:categoryId">/category/delete/:categoryId</a></span>
-                <span class="url"><a href="/category/:categoryId">/category/:categoryId</a></span>
-              </div>
+        <div class="routeCategory">
+          <h5>Categories</h5>
+          <div class="route">
+            <div class="routeMethod">
+              <span class="method">post</span>
+              <span class="method">delete</span>
+              <span class="method">get</span>
+            </div>
+            <div class="routeURL">
+              <span class="url"
+                ><a href="/.netlify/functions/api/category/create"
+                  >/category/create</a
+                ></span
+              >
+              <span class="url"
+                ><a href="/.netlify/functions/api/category/delete/:categoryId"
+                  >/category/delete/:id</a
+                ></span
+              >
+              <span class="url"
+                ><a href="/.netlify/functions/api/category/:categoryId"
+                  >/category/:id</a
+                ></span
+              >
             </div>
           </div>
-        <div class="routesContainer">
-            <h5>Types</h5>
-            <div class="publicRoutes">
-              <div class="routeMethod">
-                <span class="method">post</span>
-                <span class="method">delete</span>
-                <span class="method">get</span>
-              </div>
-              <div class="routeURL">
-                <span class="url"><a href="/type/create">/type/create</a></span>
-                <span class="url"><a href="/type/delete/:typeId">/type/delete/:typeId</a></span>
-                <span class="url"><a href="/type/:typeId">/type/:typeId</a></span>
-              </div>
+        </div>
+        <div class="routeCategory">
+          <h5>Types</h5>
+          <div class="route">
+            <div class="routeMethod">
+              <span class="method">post</span>
+              <span class="method">delete</span>
+              <span class="method">get</span>
             </div>
+            <div class="routeURL">
+              <span class="url"
+                ><a href="/.netlify/functions/api/type/create"
+                  >/type/create</a
+                ></span
+              >
+              <span class="url"
+                ><a href="/.netlify/functions/api/type/delete/:typeId"
+                  >/type/delete/:id</a
+                ></span
+              >
+              <span class="url"
+                ><a href="/.netlify/functions/api/type/:typeId"
+                  >/type/:id</a
+                ></span
+              >
+            </div>
+          </div>
         </div>
       </div>
     </div>
 
     <div class="linksContainer">
-        <h4 class="publicHeading">External Links</h4>
-        <div class="links">
-            <a href="">View project on GitHub</a>
-            <a href="">Contact me</a>
-            <a href="">See my Portfolio</a>
-            <a href="">Contribute to Project</a>
-        </div>
+      <h4 class="routesHeading">External Links</h4>
+      <div class="links">
+        <a
+          href="https://github.com/pptrgi/nyumbahub-api-serverless-function"
+          class="url"
+          >View project on GitHub</a
+        >
+        <a href="mailto:pptrgitonga@gmail.com" class="url">Contact me</a>
+        <a href="https://ptrgitonga.vercel.app" class="url">See my Portfolio</a>
+        <a
+          href="https://github.com/pptrgi/nyumbahub-api-serverless-function"
+          class="url"
+          >Contribute to Project</a
+        >
+      </div>
     </div>
     <footer>
-        <div class="footerInfo">&#169; A product of Lifen Creatives. All rights reserved.</div>
+      <div class="url">
+        &#169; A product of <strong>Lifen Creatives</strong>. All rights
+        reserved.
+      </div>
     </footer>
   </body>
 </html>
