Add test tags for the exposed type and category routes

--- a/index.html
+++ b/index.html
@@ -200,7 +200,10 @@
             <div class="routeMethod">
               <span class="method">post</span>
               <span class="method">delete</span>
-              <span class="method">get</span>
+              <div class="testRoute">
+                <span class="test">test</span>
+                <span class="method">get</span>
+              </div>
             </div>
             <div class="routeURL">
               <span class="url"
@@ -214,7 +217,8 @@
                 ></span
               >
               <span class="url"
-                ><a href="/.netlify/functions/api/category/:categoryId"
+                ><a
+                  href="/.netlify/functions/api/category/64b23f843567c004de3bf4c9"
                   >/category/:id</a
                 ></span
               >
@@ -227,7 +231,10 @@
             <div class="routeMethod">
               <span class="method">post</span>
               <span class="method">delete</span>
-              <span class="method">get</span>
+              <div class="testRoute">
+                <span class="test">test</span>
+                <span class="method">get</span>
+              </div>
             </div>
             <div class="routeURL">
               <span class="url"
@@ -241,7 +248,7 @@
                 ></span
               >
               <span class="url"
-                ><a href="/.netlify/functions/api/type/:typeId"
+                ><a href="/.netlify/functions/api/type/64b23df23567c004de3bf49b"
                   >/type/:id</a
                 ></span
               >
