Modify the index and 404 page

--- a/index.html
+++ b/index.html
@@ -16,25 +16,31 @@
       <div class="introList">
         <ul>
           <li>
-            <strong><a href="#publicEndpoints">Public Endpoints</a></strong>
+            <span class="paragraphLink"
+              ><a href="#publicEndpoints">Public Endpoints</a></span
+            >
             routes are accessible by all users.
-            <strong
-              ><a href="#protectedEndpoints">Protected Endpoints</a></strong
+            <span class="paragraphLink"
+              ><a href="#protectedEndpoints">Protected Endpoints</a></span
             >
             routes are not directly available to the public and either require
-            signing in first or can only be accessed by special/privileged users
+            signing in first or can only be accessed by special/privileged
+            users.
           </li>
           <li>
-            Click on a route to visit it. <strong>Sign in</strong> to access
-            majority of routes, <strong>register</strong> first if you haven't
+            Click on a route to visit it.
+            <span class="paragraphLink"><a href="">Sign in</a></span> to access
+            majority of routes,
+            <span class="paragraphLink"><a href="">register</a></span> first if
+            you haven't.
           </li>
           <li>
             Use a REST Client like Postman, Swagger, Thunder Client etc for POST
-            in user register and login, and other HTTP methods but GET
+            in user register and login, and other HTTP methods but GET.
           </li>
           <li>
-            Routes with <strong>"test"</strong> tag provide a sneak peek of
-            returned route data
+            Routes with <span class="paragraphLink">"test"</span> tag provide a
+            sneak peek of returned route data.
           </li>
         </ul>
       </div>
@@ -139,7 +145,9 @@
                 ></span
               >
               <span class="url"
-                ><a href="/.netlify/functions/api/user/all">/user/all</a></span
+                ><a href="/.netlify/functions/api/user/wishlist"
+                  >/user/wishlist</a
+                ></span
               >
             </div>
           </div>
@@ -153,7 +161,10 @@
               <span class="method">put</span>
               <span class="method">put</span>
               <span class="method">delete</span>
-              <span class="method">get</span>
+              <div class="testRoute">
+                <span class="test">test</span>
+                <span class="method">get</span>
+              </div>
             </div>
             <div class="routeURL">
               <span class="url"
@@ -184,7 +195,8 @@
                 ></span
               >
               <span class="url"
-                ><a href="/.netlify/functions/api/property/:propertyId"
+                ><a
+                  href="/.netlify/functions/api/property/64b8ea60f79675aae0037183"
                   >/property/:id</a
                 ></span
               >
@@ -263,13 +275,13 @@
           class="url"
           >View project on GitHub</a
         >
-        <a href="mailto:pptrgitonga@gmail.com" class="url">Contact me</a>
-        <a href="https://ptrgitonga.vercel.app" class="url">See my Portfolio</a>
+        <a href="mailto:pptrgitonga@gmail.com" class="url">Contact us</a>
         <a
           href="https://github.com/pptrgi/nyumbahub_api_serverless_function"
           class="url"
-          >Contribute to Project</a
+          >Go to NyumbaHub Website</a
         >
+        <a href="https://ptrgitonga.vercel.app" class="url">See Portfolio</a>
       </div>
     </div>
     <footer>
