--- a/404.html
+++ b/404.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/style.css" />
-    <title>404 Not Found</title>
+    <title>404 - NyumbaHub API</title>
   </head>
   <body class="body404">
     <div>
