Include the frontend URL in CORS and add its link

--- a/index.html
+++ b/index.html
@@ -276,9 +276,7 @@
           >View project on GitHub</a
         >
         <a href="mailto:pptrgitonga@gmail.com" class="url">Contact us</a>
-        <a
-          href="https://github.com/pptrgi/nyumbahub_api_serverless_function"
-          class="url"
+        <a href="https://nyumbahub.vercel.app" class="url"
           >Go to NyumbaHub Website</a
         >
         <a href="https://ptrgitonga.vercel.app" class="url">See Portfolio</a>
