Change frontend link's text color

--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
           >View project on GitHub</a
         >
         <a href="mailto:pptrgitonga@gmail.com" class="url">Contact us</a>
-        <a href="https://nyumbahub.vercel.app" class="url"
+        <a href="https://nyumbahub.vercel.app" class="url" id="frontendLink"
           >Go to NyumbaHub Website</a
         >
         <a href="https://ptrgitonga.vercel.app" class="url">See Portfolio</a>
