Add the frontend's login and register links

--- a/index.html
+++ b/index.html
@@ -29,10 +29,16 @@
           </li>
           <li>
             Click on a route to visit it.
-            <span class="paragraphLink"><a href="">Sign in</a></span> to access
-            majority of routes,
-            <span class="paragraphLink"><a href="">register</a></span> first if
-            you haven't.
+            <span class="paragraphLink"
+              ><a href="https://nyumbahub.vercel.app/signin">Sign in</a></span
+            >
+            to access majority of routes,
+            <span class="paragraphLink"
+              ><a href="https://nyumbahub.vercel.app/register"
+                >register</a
+              ></span
+            >
+            first if you haven't.
           </li>
           <li>
             Use a REST Client like Postman, Swagger, Thunder Client etc for POST
