Add author and theme color meta tags

--- a/404.html
+++ b/404.html
@@ -3,8 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/style.css" />
+    <meta
+      name="description"
+      content="NyumbaHub vacant houses finder Kenya API 404"
+    />
+    <meta name="author" content="Lifen Creatives" />
+    <meta name="theme-color" content="#00aeff" />
+
     <title>404 - NyumbaHub API</title>
+    <link rel="stylesheet" href="/style.css" />
   </head>
   <body class="body404">
     <div>
