--- a/index.html
+++ b/index.html
@@ -3,7 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>NyumbaHub API - An API for Vacant Houses in Kenya</title>
+    <meta
+      name="description"
+      content="NyumbaHub vacant houses finder Kenya API"
+    />
+    <meta name="author" content="Lifen Creatives" />
+    <meta name="theme-color" content="#00aeff" />
+
+    <title>
+      NyumbaHub API - An API for NyumbaHub Vacant Houses Finder Kenya
+    </title>
     <link rel="stylesheet" href="/style.css" />
   </head>
   <body>
