Change logout HTTP method to PUT

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
           <div class="route">
             <div class="routeMethod">
               <span class="method">put</span>
-              <span class="method">get</span>
+              <span class="method">put</span>
               <span class="method">get</span>
               <span class="method">put</span>
               <span class="method">put</span>
