Change the test tag color on the introduction section

--- a/index.html
+++ b/index.html
@@ -54,8 +54,9 @@
             in user register and login, and other HTTP methods but GET.
           </li>
           <li>
-            Routes with <span class="paragraphLink">"test"</span> tag provide a
-            sneak peek of returned route data.
+            Routes with
+            <span class="paragraphLink">'<span id="test-tag">test</span>'</span>
+            tag provide a sneak peek of returned route data.
           </li>
         </ul>
       </div>
