Change the personal website's url

--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
         <a href="https://nyumbahub.vercel.app" class="url" id="frontendLink"
           >Go to NyumbaHub Website</a
         >
-        <a href="https://ptrgitonga.vercel.app" class="url">See Portfolio</a>
+        <a href="https://pgitonga.vercel.app" class="url">See Portfolio</a>
       </div>
     </div>
     <footer>
